Suggestions - tool suggestion, yarn install help
aside from the tool suggestion, also had to install node.js and use this command to install yarn: curl -o- -L https://yarnpkg.com/install.sh | bash 

I would recommend adding a "installing yarn" section where you deem it fit, would save others hours of stress

--- a/src/pages/developing/frameworks/react.mdx
+++ b/src/pages/developing/frameworks/react.mdx
@@ -88,6 +88,12 @@ yarn add carbon-components-react carbon-components carbon-icons
 3.  For older browsers (e.g. IE11), polyfills listed in the
     [carbon-components-react/.storybook/polyfills.js file](https://github.com/carbon-design-system/carbon/blob/main/packages/react/.storybook/polyfills.js)
     are required.
+   
+4.  We recommend you have the following tools installed:
+
+    Node.js v14 or above here or follow their installation through a package manager here) If you're on macOS, we recommend using nvm to help manage different versions of Node.js nvm as your version manager for Node.
+    Git
+    Yarn
 
 ## Development
 
