docs: v11 size token updates for Select component (#2385)
* docs: v11 size token updates for Select component

This PR updates the size tokens on the Style tab for the Select component.

* removed outdated content

* Update style.mdx

Co-authored-by: Anna Gonzales <anna.gonzales3@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/select/style.mdx
+++ b/src/pages/components/select/style.mdx
@@ -8,10 +8,6 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-Inputs come in two different colors. The default input color is `$field-01` and
-is used on `$ui-background` and `$ui-02` page backgrounds. The `--light` version
-input color is `$field-02` and is used on `$ui-01` page backgrounds.
-
 | Class                 | Property   | Color token     |
 | --------------------- | ---------- | --------------- |
 | `.bx--select-input`   | background | `$field`        |
@@ -39,16 +35,6 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 | `.bx--select-input:disabled`      | background | `$field-disabled` |
 | `.bx--select-input:disabled`      | text color | `$text-disabled`  |
 
-**Open:** Style determined by browser
-
-**Help text:** Help text appears below the label when the input is active. Help
-text remains visible while the input is focused and disappears after focus away.
-
-**Error:** Error messages appear below the input field and are always present
-while invalid.
-
-**Disabled:** Disabled state has a `.not-allowed` cursor hover.
-
 <div className="image--fixed">
 
 ![Open, disabled, and more information/help state examples for Select](images/select-style-3.png)
@@ -75,7 +61,6 @@ and any proper nouns capitalized. Select text should be three words or less.
 
 | Class                     | Property                    | px / rem | Spacing token |
 | ------------------------- | --------------------------- | -------- | ------------- |
-| `.bx--select-input`       | height                      | 40 / 2.5 | –             |
 | `.bx--label`              | margin-bottom               | 8 / 0.5  | `$spacing-03` |
 | `.bx--select-input`       | padding-left                | 16 / 1   | `$spacing-05` |
 | `.bx--select__arrow`      | padding-left, padding-right | 16 / 1   | `$spacing-05` |
@@ -90,39 +75,28 @@ and any proper nouns capitalized. Select text should be three words or less.
 
 <Caption>Structure and spacing measurements for select | px / rem</Caption>
 
-### Small Select
-
-| Class                | Property                    | px / rem | Spacing token |
-| -------------------- | --------------------------- | -------- | ------------- |
-| `.bx--select-input`  | height                      | 32 / 2   | –             |
-| `.bx--select-input`  | padding-left                | 8 / 0.5  | `$spacing-03` |
-| `.bx--select__arrow` | padding-left, padding-right | 8 / 0.5  | `$spacing-03` |
-
-<div className="image--fixed">
-
-![Structure and spacing measurements for small select](images/select-style-4.png)
-
-</div>
-
-<Caption>
-  Structure and spacing measurements for small select | px / rem & examples of
-  open and disabled small select states
-</Caption>
-
 ### Inline select
 
 | Class                | Property                    | px / rem | Spacing token |
 | -------------------- | --------------------------- | -------- | ------------- |
-| `.bx--select-input`  | height                      | 32 / 2   | –             |
 | `.bx--select-input`  | padding-left                | 8 / 0.5  | `$spacing-03` |
 | `.bx--select__arrow` | padding-left, padding-right | 8 / 0.5  | `$spacing-03` |
 
 <div className="image--fixed">
 
+  
 ![Structure and spacing measurements for Inline Select](images/select-style-6.png)
+  
 
 </div>
 
 <Caption>
   Structure and spacing measurements for inline select (focused) | px / rem
 </Caption>
+
+## Size
+| Element              | Size                        | Height (px / rem)  |
+| -------------------- | --------------------------- | ------------------ | 
+| Input                | Small (sm)                  | 32 / 2             | 
+|                      | Medium (md)                 | 40 / 2.5           |
+|                      | Large (lg)                  | 48 / 3             |
