docs: v11 size updates for date picker (#2390)
* update size table in style tab

* Update style.mdx

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/date-picker/style.mdx
+++ b/src/pages/components/date-picker/style.mdx
@@ -122,11 +122,11 @@ The widths of the date inputs may vary based on the grid and layout.
 
 ### Sizes
 
-| Element | Property | Size    | px / rem |
-| ------- | -------- | ------- | -------- |
-| Field   | height   | Small   | 32 / 2   |
-|         | height   | Default | 40 / 2.5 |
-|         | height   | Large   | 48 / 3   |
+| Element | Size        | Height px / rem |
+| ------- | ----------- | --------------- |
+| Field   | Small (sm)  | 32 / 2          |
+|         | Medium (md) | 40 / 2.5        |
+|         | Large (lg)  | 48 / 3          |
 
 <div className="image--fixed">
 
