docs: v11 size updates for button (#2401)
* Update style.mdx

* Delete button-style-sizes.png

* swap button-style-sizes

* Update usage.mdx

* Delete button-style-sizes.png

* Add files via upload

* Delete button-style-sizes.png

* Add files via upload

* Delete button_usage_3.png

* Add files via upload

* fix 2XL

* Update src/pages/components/button/style.mdx

Co-authored-by: Anna Gonzales <anna.gonzales3@gmail.com>

Co-authored-by: Anna Gonzales <anna.gonzales3@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -233,21 +233,21 @@ recommended by design as the proper distance between buttons.
 | External: button | margin                    | 1px      | -             |
 | Button pairings  | margin-left, margin-right | 0        | –             |
 
-## Sizes
+### Sizes
 
-There are four button sizes for use in productive situations—full bleed,
-default, inline, and small. The large expressive button is used in editorial and
-digital marketing experiences. See
-[Button sizes](/components/button/usage#button-sizes) on the Usage tab for more
-information about specific use cases for each button size.
+There are six button sizes: small, medium, large productive, large expressive, 
+extra large, and 2XL. The large expressive button is used in editorial and 
+digital marketing experiences. See [Button sizes](/components/button/usage#button-sizes) 
+on the Usage tab for more information about specific use cases for each button size.
 
-| Button size        | Height (px / rem) | Type size (px / token) |
-| ------------------ | ----------------- | ---------------------- |
-| _Full bleed_       | 64 / 4            | 14px / \$body-short-01 |
-| _Default_          | 48 / 3            | 14px / \$body-short-01 |
-| _Large expressive_ | 48 / 3            | 16px / \$body-short-02 |
-| _Field_            | 40 / 2.5          | 14px / \$body-short-01 |
-| _Small_            | 32 / 2            | 14px / \$body-short-01 |
+| Element           | Size              | Height (px / rem)      |
+| ----------------- | ----------------- | ---------------------- |
+| Button            | Small             | 32 / 2                 |
+|                   | Medium            | 40 / 2.5               |
+|                   | Large productive  | 48 / 3                 |
+|                   | Large expressive  | 48 / 3                 |
+| Full bleed button | Extra large       | 64 / 4                 |
+|                   | 2xl               | 80 / 5                 |
 
 <Row>
 <Column colLg={8}>
