feat: twoColumn color palette prop

--- a/src/pages/data-visualization/color-palettes/index.mdx
+++ b/src/pages/data-visualization/color-palettes/index.mdx
@@ -80,7 +80,7 @@ Alert colors are used to reflect status. Typically, red represents danger or
 error; orange represents a serious warning; yellow represents a regular warning,
 and green represents normal or success.
 
-<ColorPalette type="alert" />
+<ColorPalette twoColumn type="alert" />
 
 ## Gradient use
 
