--- a/src/pages/patterns/status-indicator-pattern/index.mdx
+++ b/src/pages/patterns/status-indicator-pattern/index.mdx
@@ -197,7 +197,7 @@ information and workflow progress. We’ve also included gray and purple to add
 more depth to the system. Gray indicates drafts or jobs that haven’t been
 started, and purple indicates outliers or undefined statuses.
 
-<ColorPalette type="status" />
+<ColorPalette twoColumn type="status" />
 
 #### Extended status palettes
 
