--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -71,11 +71,11 @@ content.
 The width of the search field should appropriately fit the design and layout of
 content.
 
-| Size                                              | Height (px / rem)                   | 
-| ------------------------------------------------- | ----------------------------------- | 
-| Small (sm)                                        | 32 / 2                              |    
-| Medium (md)                                       | 40 / 2.5                            |
-| Large (lg)                                        | 48 / 3                              |
+|Element     | Sizes                                | Height (px / rem)                   | 
+| -----------| ------------------------------------ | ----------------------------------- | 
+|Input       | Small (sm)                           | 32 / 2                              |    
+|            | Medium (md)                          | 40 / 2.5                            |
+|            | Large (lg)                           | 48 / 3                              |
 
 
 <div className="image--fixed">
