fix: palette data, caret size, overview paragraph spacing

--- a/src/pages/patterns/status-indicator-pattern/index.mdx
+++ b/src/pages/patterns/status-indicator-pattern/index.mdx
@@ -34,12 +34,10 @@ and identify status and respond accordingly.
 
 An indicator highlights a page element and informs the user of something that
 needs the user’s attention. Often, the indicator will denote that there has been
-a change to a particular item.
-
-They are frequently used to signal validation errors or notifications, changes,
-or updates. They can also be used on their own. Indicators are visual cues
-intended to attract the user's attention to a piece of content or UI element
-that is dynamic in nature.
+a change to a particular item. They are frequently used to signal validation
+errors or notifications, changes, or updates. They can also be used on their
+own. Indicators are visual cues intended to attract the user's attention to a
+piece of content or UI element that is dynamic in nature.
 
 In this pattern we explore:
 
