--- a/src/pages/guidelines/typography/overview.mdx
+++ b/src/pages/guidelines/typography/overview.mdx
@@ -6,7 +6,7 @@ title: Typography
 description:
   Typography can help create clear hierarchies, organize information, and guide
   users through a product or experience.
-tabs: ['Overview', 'Productive', 'Expressive', 'Code']
+tabs: ['Overview', 'Experiences', 'Type sets', 'Code']
 ---
 
 import TypeScaleTable from '../../../../src/components/TypeScaleTable';
